// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`COMPONENT - Input Input with error renders correctly Input 1`] = `
Array [
  .c1 {
  border: 1px solid #e0151d;
  border-radius: 0.75rem;
  padding: 1rem;
  outline: 0;
  width: 100%;
}

.c1:disabled {
  background-color: #454545;
}

.c0 {
  margin-bottom: 1rem;
}

<label
    className="c0"
  >
    Dummy Label
    <input
      className="c1"
      placeholder="Dummy placeHolder"
      type="text"
    />
  </label>,
  .c0 {
  font-style: italic;
  color: #e0151d;
}

<div
    className="c0"
  >
    dummyError
  </div>,
]
`;

exports[`COMPONENT - Input Input without error renders correctly Input 1`] = `
.c1 {
  border: 1px solid #222222;
  border-radius: 0.75rem;
  padding: 1rem;
  outline: 0;
  width: 100%;
}

.c1:disabled {
  background-color: #454545;
}

.c0 {
  margin-bottom: 1rem;
}

<label
  className="c0"
>
  Dummy Label
  <input
    className="c1"
    placeholder="Dummy placeHolder"
    type="text"
  />
</label>
`;

exports[`COMPONENT - Input Input without label renders correctly Input 1`] = `
.c0 {
  border: 1px solid #222222;
  border-radius: 0.75rem;
  padding: 1rem;
  outline: 0;
  width: 100%;
}

.c0:disabled {
  background-color: #454545;
}

<input
  className="c0"
  placeholder="Dummy placeHolder"
  type="text"
/>
`;
